infrastructure/configs/the-intersect/hubble-httproute.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  labels:
    shared-gateway-access: "true"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui-httproute
  namespace: kube-system
spec:
  parentRefs:
    - name: internal-gateway-http
      namespace: cilium-ingress
  hostnames: ["${SUB_COBRA_BALL}.${DOMAIN_COBRA_LANTERN}"]
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
